got left shifting merging correctly

--- a/src/App.css
+++ b/src/App.css
@@ -24,4 +24,16 @@
   font-size: 1.5rem;
   text-align: center;
   vertical-align: text-bottom;
+  line-height: 50px;
+}
+
+#scoreboard{
+  height:50px;
+  width: 200px;
+  border-radius: 10px;
+  font-size: 1.5rem;
+  background-color: aqua;
+  text-align: left;
+  line-height: 50px;
+  padding-left: 20px;
 }
